# side-sleeper

./: Cargo.toml  diagram.json  wokwi.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: main.rs
