[package]
name = "side-sleeper"
version = "0.1.0"
authors = ["peter"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22.0", features = ["debug", "esp32", "log"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = { version = "0.4.22" }
esp-alloc = { version = "0.5.0" }
embassy-time = "0.3.2"
embassy-executor = "0.6.3"
embassy-sync = "0.6.1"
esp-hal-embassy = { version = "0.5.0", features = ["esp32", "integrated-timers", "log"] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
