[package]
name = "side-sleeper"
version = "0.1.0"
authors = ["peter"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.15.1", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
    "debug",
    "esp32",
    "log",
    "unstable",
] }
esp-println = { version = "0.13.1", features = ["esp32", "log"] }
log = { version = "0.4.27" }
esp-alloc = { version = "0.7.0" }
embassy-time = "0.4.0"
embassy-executor = "0.7.0"
embassy-sync = "0.6.2"
esp-hal-embassy = { version = "0.7.0", features = ["esp32", "log"] }
embedded-hal = "1.0.0"
embassy-futures = { version = "0.1.1", features = ["log"] }
mpu6050 = { git = "https://github.com/juliangaal/mpu6050.git", branch = "master" }
embedded-hal-async = "1.0.0"
async-trait = "0.1.88"
embedded-storage = "0.3.1"
esp-storage = { version = "0.5.0", features = ["esp32"] }
postcard = { version = "1.1.1", features = ["alloc", "postcard-derive"] }
serde = { version = "1.0.219", default-features = false, features = [
    "alloc",
    "derive",
] }
fugit = "0.3.7"
num-traits = { version = "0.2.19", default-features = false }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-hal]
opt-level = 3

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
